objects/SearchPreset__mdt.object
<CustomObject>
    <description>Search Presets for doctor and care givers</description>
    <label>Search Preset</label>
    <pluralLabel>Search Preset</pluralLabel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                    <default>true</default>
                    <label>Doctor</label>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>AND NOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaregiverJob__c</fullName>
        <label>Caregiver Job</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalDiscipline__c</fullName>
        <label>Medical Discipline</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdditionalDesignations__c</fullName>
        <label>Additional Designations</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaregiverFurtherEducation__c</fullName>
        <label>Caregiver Further Education</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherTrainingAndDevelopment__c</fullName>
        <label>Other Training And Development</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaregiverPracticalExperience__c</fullName>
        <label>Caregiver Practical Experience</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>